--- a/pages/about.html
+++ b/pages/about.html
@@ -33,7 +33,7 @@
 						</div>
 						<ul class="nav-items">
 							<li>
-								<a class="home" href="#">Home</a>
+								<a class="home" href="index.html" target="_blank">Home</a>
 							</li>
 							<li>
 								<a class="about" href="#">About</a>
@@ -67,22 +67,22 @@
 			<nav>
 				<ul>
 					<li>
-						<a class="introduction" href="#">INTRODUCTION</a>
+						<a class="introduction" href="about.html#page2">INTRODUCTION</a>
 					</li>
 					<li>
-						<a class="our-services" href="#">OUR SERVICES</a>
+						<a class="our-services" href="about.html#page3">OUR SERVICES</a>
 					</li>
 					<li>
-						<a class="our-clients" href="#">OUR CLIENTS</a>
+						<a class="our-clients" href="about.html#page4">OUR CLIENTS</a>
 					</li>
 					<li>
-						<a class="contact-us" href="#">CONTACT US</a>
+						<a class="contact-us" href="about.html#contact-page">CONTACT US</a>
 					</li>
 				</ul><button>Contact us
 				<p>&#9654;</p></button>
 			</nav>
 		</div>
-		<div class="page2">
+		<div id="page2">
 			<div class="intro-container">
 				<h1>Introduction</h1>
 			</div>
@@ -96,7 +96,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="page3">
+		<div id="page3">
 			<div class="services">
 				<h1>Our services</h1>
 			</div>
@@ -133,7 +133,7 @@
 				</div>
 			</div>
 		</div>
-	<div class="page4">
+	<div id="page4">
 		<div class="clients">
 			<h1>Our clients</h1>
 		</div>
@@ -167,7 +167,7 @@
             </div>
         </div>
     </div>
-	<div class="contact-page">
+	<div id="contact-page">
 		<div class="contact-header">
 			Contact us
 		</div>
