--- a/pages/index.html
+++ b/pages/index.html
@@ -32,7 +32,7 @@
                                 <a href="#" class="home">Home</a>
                             </li>
                             <li>
-                                <a href="#" class="about">About</a>
+                                <a href="about.html" target="_blank"class="about">About</a>
                             </li>
                             <li>
                                 <a href="#" class="gallery">Gallery</a>
